[package]
    name    = "vg-batteries"
    version = "0.1.0"
    edition = "2021"
    license = "MIT OR Apache-2.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    reqwest = { version = "*", features = ["json"], optional = true }
    tokio = { version = "*", features = [
        "time",
        "io-util",
        "rt",
        "process",
        "sync",
        "macros",
    ], optional = true }
    teloxide = { version = "*", features = ["sqlite-storage"], optional = true }
    serde = { version = "*", features = ["derive"], optional = true }
    serde_json = { version = "*" }
    anyhow = { version = "*" }
    once_cell = { version = "*" }
    dashmap = { version = "*", optional = true }
    parking_lot = { version = "*", optional = true, features = ["send_guard"] }
    async-lock = { version = "*", optional = true }
    pin-project = { version = "*", optional = true }
    futures = { version = "*", optional = true }
    google-sheets4 = { version = "*", optional = true }
    url = { version = "*", optional = true }
    dioxus = { version = "*", optional = true }


[features]
    default = []
    teloxide = [
        "dep:teloxide",
        "dep:dashmap",
        "dep:parking_lot",
        "dep:async-lock",
        "dep:tokio",
    ]
    dioxus = ["dep:dioxus", "dep:tokio", "dep:futures", "dep:parking_lot"]
    google = ["dep:google-sheets4", "dep:url"]
    gpt = ["dep:reqwest", "dep:serde"]
    json = []
    process = ["dep:tokio"]
    streams = ["dep:pin-project", "dep:futures"]
