[package]
    name          = "vg-batteries"
    version       = "0.1.1"
    edition       = "2021"
    license       = "MIT OR Apache-2.0"
    repository    = "https://github.com/valyagolev/vg-batteries"
    homepage      = "https://github.com/valyagolev/vg-batteries"
    description   = "glimpse into my personal madness"
    documentation = "https://docs.rs/vg-batteries"

[dependencies]
    reqwest = { version = "0", features = ["json"], optional = true }
    tokio = { version = "1", features = [
        "time",
        "io-util",
        "rt",
        "process",
        "sync",
        "macros",
    ], optional = true }
    teloxide = { version = "0", features = ["sqlite-storage"], optional = true }
    serde = { version = "1", features = ["derive"], optional = true }
    serde_json = { version = "1" }
    anyhow = { version = "1" }
    once_cell = { version = "1" }
    dashmap = { version = "5", optional = true }
    parking_lot = { version = "0", optional = true, features = ["send_guard"] }
    async-lock = { version = "2", optional = true }
    pin-project = { version = "1", optional = true }
    futures = { version = "0", optional = true }
    google-sheets4 = { version = "5", optional = true }
    url = { version = "2", optional = true }
    dioxus = { version = "0", optional = true }


[features]
    default = []
    teloxide = [
        "dep:teloxide",
        "dep:dashmap",
        "dep:parking_lot",
        "dep:async-lock",
        "dep:tokio",
    ]
    dioxus = ["dep:dioxus", "dep:tokio", "dep:futures", "dep:parking_lot"]
    google = ["dep:google-sheets4", "dep:url"]
    gpt = ["dep:reqwest", "dep:serde"]
    json = []
    process = ["dep:tokio"]
    streams = ["dep:pin-project", "dep:futures"]

[package.metadata.docs.rs]
    all-features = true
